[gd_scene load_steps=4 format=3 uid="uid://dh2l1mqutpnq1"]

[ext_resource type="Script" uid="uid://dcjn6jx5b6sto" path="res://dialogue/speaker.gd" id="1_wh5ik"]
[ext_resource type="PackedScene" uid="uid://2dk5c86dnip3" path="res://speaker_animation/speaker_animation.tscn" id="2_1wgn8"]
[ext_resource type="SpriteFrames" uid="uid://bycmt6anjpi71" path="res://speaker_animation/pius.tres" id="3_6sq8u"]

[node name="Speaker" type="Node2D"]
script = ExtResource("1_wh5ik")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 0
mouse_filter = 2

[node name="HDialogueContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HDialogueContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="DialogueLabel" type="RichTextLabel" parent="VBoxContainer/HDialogueContainer/MarginContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
bbcode_enabled = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
meta_underlined = false
hint_underlined = false

[node name="Control2" type="Control" parent="VBoxContainer/HDialogueContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HBustContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBustContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="VBoxContainer/HBustContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SpeakerAnimation" parent="VBoxContainer/HBustContainer/MarginContainer/Control" instance=ExtResource("2_1wgn8")]
unique_name_in_owner = true
position = Vector2(0, -70)
scale = Vector2(0.648148, 0.648148)
sprite_frames = ExtResource("3_6sq8u")
frame_progress = 0.473434
philosopher = 0
intensity_switch_chance = 0.2

[node name="Control" type="Control" parent="VBoxContainer/HBustContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
volume_db = 24.0

[connection signal="meta_clicked" from="VBoxContainer/HDialogueContainer/MarginContainer/DialogueLabel" to="." method="_on_rich_text_label_meta_clicked"]
